<?xml version="1.0"?>
<package format="3">
  <name>rm_bringup</name>
  <version>0.1.0</version>
  <description>Centralized bringup for rm_localization: launch files and parameters.</description>

  <maintainer email="maintainer@example.com">rm_localization</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch-time dependencies (executables provided by these packages) -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Backends we can launch -->
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>faster_lio_ros2</exec_depend>
  <exec_depend>point_lio_ros2</exec_depend>
  <exec_depend>fast_lio_localization_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
