<?xml version="1.0"?>
<package format="3">
  <name>rm_bt_decision</name>
  <version>0.1.0</version>
  <description>Behavior Tree framework for ROS 2 (Humble) using py_trees, with configurable YAML/Python trees and Nav2 action integration.</description>
  <maintainer email="dev@xjtu.local">xjtu</maintainer>
  <license>MIT</license>

  <!-- <buildtool_depend>ament_python</buildtool_depend> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- Optional: web viewer (available via apt: ros-humble-py-trees-js) -->
  <exec_depend>py_trees_js</exec_depend>
  <exec_depend>py_trees_ros_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 