<?xml version="1.0"?>
<package format="3">
  <name>rm_communication</name>
  <version>0.1.0</version>
  <description>ROS2 communication framework bridging serial_driver and std_msgs/String with 64-byte packets, plus a handler to assemble/disassemble protocol frames.</description>
  <maintainer email="dev@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>


  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 
