<?xml version="1.0"?>
<package format="3">
  <name>fast_lio_localization_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 port of FAST_LIO_LOCALIZATION scripts and launch</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libgoogle-glog-dev</depend>


  <exec_depend>sensor_msgs_py</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <!-- <exec_depend>python3-open3d</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 