<?xml version="1.0"?>
<package format="3">
  <name>rviz_click_obstacles</name>
  <version>0.1.0</version>
  <description>RViz2 panel/tool to add/clear click obstacles for Nav2 costmap layer</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>qtbase5-dev</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>

  <exec_depend>qt5-qmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="plugin_description.xml"/>
    <rviz plugin="plugin_description.xml"/> 
  </export>
</package> 