<?xml version="1.0"?>
<package format="3">
  <name>rm_ta</name>
  <version>0.1.0</version>
  <description>Traversability costmap node producing nav_msgs/OccupancyGrid from point clouds.</description>
  <maintainer email="xjturm@example.com">xjturm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosbag2</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 